Attempting bitwise bulk int4x4 scoring